--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@ body{
   color: black;
   margin: 0;
   padding: 0;
+  /*font-family: Avenir;*/
 }
 
 *{
@@ -13,6 +14,7 @@ body{
 
 body, html, .fullPage {
   height: 100%;
+  font-family: Avenir light;
 }
 /*Nav Bar*/
 .header{
@@ -35,9 +37,12 @@ body, html, .fullPage {
   color: #E05151;
 }
 
-a{
+.header a{
   text-decoration: none;
-  border: 0;
+}
+
+.nameA {
+  font-family: Avenir!important;
 }
 
 .headerItems{
@@ -55,7 +60,7 @@ a{
 li {
   display: inline-block;
   list-style: none;
-  padding: .5em;
+  padding: .3em;
   font-size: 18px;
 }
 
@@ -66,7 +71,8 @@ li {
   padding-bottom: 1em;
   text-align: center;
   color: #E05151;
-  height: 75.5%;
+  height: 76%;
+  font-family: Avenir;
 }
 
 #me{
@@ -117,7 +123,7 @@ li {
 .aboutMe{
   /*z-index: 1;*/
   background-color: white;
-  height: 92%;
+  height: 93%;
   border: 2px solid orange;
 }
 
@@ -163,7 +169,7 @@ li {
 .resume{
   padding-left: 33em;
   background-color: #E05151;
-  height: 92%;
+  height: 93%;
   border: 2px solid blue;
 }
 .resume:hover{
@@ -174,7 +180,7 @@ li {
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 92%;
+  height: 93%;
   flex-wrap: wrap;
   align-content: space-around;
   align-items: center;
@@ -187,7 +193,7 @@ li {
 .portfolioContainer div {
   background-color: #333333;
   width: 100%;
-  height: 92%;
+  height: 93%;
   display: inline-block;
   display: none;
   /*z-index: 0;*/
@@ -201,6 +207,8 @@ li {
   /*background: none;*/
   width: 7em;
   height: 7em;
+  cursor: pointer;
+  z-index: 1;
 }
 
 .next {
@@ -217,17 +225,206 @@ li {
   max-width: 100%;
 }
 
+.slides{
+  /*padding-top: 11%;*/
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-wrap: nowrap;
+  align-content: space-around;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
+
+.slides section{
+  position: relative;
+  align-self: auto;
+  height: 100%;
+  text-align: left;
+}
+
+.slideMain{
+  display: flex;
+  flex-flow: row wrap;
+  margin-left: 8%;
+  justify-content: space-around;
+}
+
+#mainP{
+  width: 80%;
+  float: left;
+  margin-left: 6em;
+}
+
+#mainP img{
+  height: 300px;
+  width: 300px;
+  padding: 2%;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transition: all 1s ease-in-out;
+}
+/*
+.slide1Main:hover{
+  content: url(./../images/slide1B.png);
+}
+
+.slide2Main:hover{
+  content: url(./../images/slide2B.png);
+}
+
+.slide3Main:hover{
+  content: url(./../images/slide3B.png);
+}
+
+.slide4Main:hover{
+  content: url(./../images/slide4B.png);
+}
+
+.slide5Main:hover{
+  content: url(./../images/slide5B.png);
+}
+
+.slide6Main:hover{
+  content: url(./../images/slide6B.png);
+}*/
+/*.card-container {
+  cursor: pointer;
+  perspective: 600;
+  position: relative;
+  width: 300px;
+  padding: 2%;
+  height: 300px;
+}
+
+.card {
+  height: 300px;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: all 1s ease-in-out;
+  width: 300px;
+}
+.card:hover {
+  transform: rotateY(180deg);
+}
+.card .side {
+  backface-visibility: hidden;
+  border-radius: 6px;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+}
+
+.card .back {
+  background: transparent;
+  color: #F0A800;
+  line-height: 150px;
+  text-align: center;
+  transform: rotateY(180deg);
+}*/
+
+.slides{
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+
+.leftP{
+  width: 30%;
+  padding-left: 7em;
+  float: left;
+  margin-left: 6em;
+  z-index: 999;
+}
+
+.leftP img{
+  margin-left: 1em;
+  width: 300px;
+  height: 300px;
+}
+
+.sectionTop{
+  max-height: 300px;
+  max-width: 300px;
+  z-index: 999;
+}
+
+.imgTop{
+  margin-top: 3em;
+  border-radius: .3em;
+  transition: all 0.5s;
+}
+
+.imgTop:hover{
+  transition: all 0.5s;
+  max-height: 650px;
+}
+
+.sectionBtm {
+  max-width: 300px;
+  max-height: 300px;
+  z-index: 1;
+  /*margin-top: 2em;*/
+}
+
+.rightP{
+  width: 50%;
+  float: right;
+  margin-right: 6em;
+  z-index: 1;
+}
+
+.rightPTop{
+  max-height: 80%;
+  /*background-color: orange;*/
+}
+
+.rightP h3, .rightPTop h3{
+  color: white;
+  text-align: center;
+  font-family: Avenir;
+}
+
+.rightP p, .rightPTop p, .rightPBtm p{
+  font-size: 20px;
+}
+
+.rightPBtm{
+  max-height: 15%;
+  display: inline;
+}
+
+.rightPBtm p {
+  float: left;
+}
+
+.portfolioGit{
+  padding-left: 2em;
+  z-index: 2;
+}
+
+.backToMain{
+  height: 100px;
+  width: 100px;
+  float: right;
+  cursor: pointer;
+}
+
 /*Contact*/
 .contact{
   background-color: white;
   height: 81.5%;
-  /*border: 2px solid yellow;*/
 }
+
 legend{
   font-size: 25px;
 }
 .email_form{
-  margin: 1.5em auto;
+  margin: 3em auto;
+  padding-top: 3em;
   width: 40%;
   color: #F3843E;
   text-align: center;
@@ -238,7 +435,7 @@ legend{
 #wrap{
   text-align:center;
 }
-.btn-box {
+.btn {
 -webkit-border-radius: 2px;
 border-radius: 2px;
 cursor: default;
@@ -252,14 +449,6 @@ line-height: 27px;
 min-width: 54px;
 outline: 0;
 padding: 0 8px;
-}
-
-.btn-pos {
-position: relative;
-display: inline-block;
-}
-
-.btn-gradient {
 -webkit-box-shadow: none;
 box-shadow: none;
 background-color: #E05151;
@@ -269,7 +458,7 @@ border: 1px solid #333333;
 color: #333333;
 }
 
-.btn-gradient:hover {
+.btn:hover {
 -webkit-box-shadow: none;
 box-shadow: none;
 background-color: #E05151;
